--- a/src/pages/ChatPage/ui/Dialog/MessageCloud/MessageCloud.module.scss
+++ b/src/pages/ChatPage/ui/Dialog/MessageCloud/MessageCloud.module.scss
@@ -1,13 +1,5 @@
-.rightWrapper {
-  position: relative;
-  padding: 11px;
-  background-color: #F8F8F8;
-  max-width: 40%;
 
-  align-self: flex-end;
-}
-
-.leftWrapper {
+.wrapper {
   position: relative;
   padding: 11px;
   background-color: #F8F8F8;
