--- a/src/pages/ChatPage/ui/Dialog/Dialog.module.scss
+++ b/src/pages/ChatPage/ui/Dialog/Dialog.module.scss
@@ -36,6 +36,21 @@
 
   }
 
+  .body {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: relative;
+    max-height: calc(100vh - 70px - 60px);
+    overflow: scroll;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    height: 100%;
+    justify-items: flex-end;
+
+  }
+
+
   .footer {
     margin-top: auto;
     padding: 10px 0;
