--- a/src/pages/ChatPage/styles.module.scss
+++ b/src/pages/ChatPage/styles.module.scss
@@ -6,11 +6,10 @@
   right: 0;
   bottom: 0;
 
-
   grid-template-columns: 1fr 3fr;
 
   .sidebar {
-    border-right: 1px solid #FBFBFB;
+    border-right: 1px solid #fbfbfb;
     height: 100%;
     padding: 0 10px;
   }
