--- a/src/pages/ProfilePage/styles.module.scss
+++ b/src/pages/ProfilePage/styles.module.scss
@@ -5,8 +5,8 @@
 
   .sidebar {
     width: 64px;
-    background: #FBFBFB;
-    border-right: 1px solid #EAEAEA;
+    background: #fbfbfb;
+    border-right: 1px solid #eaeaea;
     display: flex;
     align-items: center;
     justify-content: center;
