--- a/src/pages/ProfilePage/ui/ProfileInput.module.scss
+++ b/src/pages/ProfilePage/ui/ProfileInput.module.scss
@@ -10,7 +10,7 @@
   }
 
   span {
-    color: #1E1E1E;
+    color: #1e1e1e;
     font-size: 13px;
     font-style: normal;
     font-weight: 500;
@@ -21,7 +21,7 @@
     box-sizing: border-box;
     border: none;
     padding: 0;
-    color: #1E1E1E;
+    color: #1e1e1e;
     font-size: 13px;
     font-style: normal;
     font-weight: 500;
@@ -31,9 +31,7 @@
 
     &:focus {
       outline: none;
-      border-bottom: 1px solid #3369F3;
+      border-bottom: 1px solid #3369f3;
     }
-
-
   }
 }
