--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -21,7 +21,7 @@
 
   background: rgb(51, 105, 243);
   border: none;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 
   &:hover {
     cursor: pointer;
