--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -12,10 +12,10 @@
 
   .input {
     border: none;
-    border-bottom: 1px solid #3369F3;
+    border-bottom: 1px solid #3369f3;
     padding: 8px 0;
 
-    color: #1E1E1E;
+    color: #1e1e1e;
     font-size: 13px;
     line-height: 16px;
     transition: all 0.3s ease-in-out;
