--- a/src/pages/404Page/styles.module.scss
+++ b/src/pages/404Page/styles.module.scss
@@ -8,11 +8,10 @@
     display: flex;
     flex-direction: column;
 
-
     .title {
       margin: 0;
 
-      color: #1E1E1E;
+      color: #1e1e1e;
       text-align: center;
       font-size: 40px;
       font-style: normal;
@@ -22,7 +21,7 @@
 
     .subtitle {
       margin: 20px 0 0;
-      color: #1E1E1E;
+      color: #1e1e1e;
       text-align: center;
       font-size: 20px;
       font-style: normal;
@@ -32,7 +31,7 @@
 
     .link {
       margin-top: 70px;
-      color: #3369F3;
+      color: #3369f3;
       text-align: center;
       font-size: 11px;
       font-style: normal;
