--- a/src/pages/ChatPage/ui/Dialog/MessageCloud/MessageCloud.module.scss
+++ b/src/pages/ChatPage/ui/Dialog/MessageCloud/MessageCloud.module.scss
@@ -1,8 +1,7 @@
-
 .wrapper {
   position: relative;
   padding: 11px;
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
   max-width: 40%;
   align-self: flex-start;
 }
