--- a/src/shared/ui/ButtonLink/ButtonLink.module.scss
+++ b/src/shared/ui/ButtonLink/ButtonLink.module.scss
@@ -8,7 +8,7 @@
 
   border: none;
   background-color: transparent;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 
   &:hover {
     cursor: pointer;
@@ -16,7 +16,7 @@
   }
 
   span {
-    color: #3369F3;
+    color: #3369f3;
     font-size: 13px;
     font-weight: 500;
     line-height: 16px;
