--- a/src/pages/404Page/styles.module.scss
+++ b/src/pages/404Page/styles.module.scss
@@ -1,6 +1,7 @@
 .main {
-  width: 100vw;
-  height: 100vh;
+  box-sizing: border-box;
+  max-width: 100vw;
+  max-height: 100vh;
   justify-items: center;
 
   .content {
