--- a/src/pages/500Page/styles.module.scss
+++ b/src/pages/500Page/styles.module.scss
@@ -1,7 +1,9 @@
 .main {
-  width: 100vw;
-  height: 100vh;
+  box-sizing: border-box;
+  max-width: 100vw;
+  max-height: 100vh;
   justify-items: center;
+
 
   .content {
     margin-top: 30vh;
